--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python = "^3.11"
 pandas = "^2.2.3"
 openai = "^1.64.0"
 pillow = "^11.1.0"
+anthropic = "^0.48.0"
+dotenv = "^0.9.9"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.1.1"
