--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ openai = "^1.64.0"
 pillow = "^11.1.0"
 anthropic = "^0.48.0"
 dotenv = "^0.9.9"
+langchain-openai = "^0.3.7"
+ragas = "^0.2.13"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.1.1"
