--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ anthropic = "^0.48.0"
 dotenv = "^0.9.9"
 langchain-openai = "^0.3.7"
 ragas = "^0.2.13"
+scipy = "^1.15.2"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.1.1"
